# ChangeLog for dev-libs/libgusb
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-libs/libgusb/ChangeLog,v 1.4 2011/12/29 17:29:43 pacho Exp $

  29 Dec 2011; Pacho Ramos <pacho@gentoo.org> libgusb-0.1.2.ebuild:
  amd64 stable, bug 393007

  20 Dec 2011; Jeroen Roovers <jer@gentoo.org> libgusb-0.1.2.ebuild:
  Stable for HPPA (bug #393007).

  30 Nov 2011; Jeroen Roovers <jer@gentoo.org> libgusb-0.1.2.ebuild:
  Marked ~hppa (bug #392057).

*libgusb-0.1.2 (14 Nov 2011)

  14 Nov 2011; Alexandre Rostovtsev <tetromino@gentoo.org>
  +libgusb-0.1.2.ebuild, +metadata.xml:
  Add new gobject wrapper for libusb; it will be needed for future versions of
  x11-misc/colord.
