@@ -1,6 +1,11 @@
 # ChangeLog for dev-libs/libgusb
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/libgusb/ChangeLog,v 1.4 2011/12/29 17:29:43 pacho Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/libgusb/ChangeLog,v 1.5 2011/12/30 14:19:17 ssuominen Exp $
+
+*libgusb-0.1.3 (30 Dec 2011)
+
+  30 Dec 2011; Samuli Suominen <ssuominen@gentoo.org> +libgusb-0.1.3.ebuild:
+  Version bump.
 
   29 Dec 2011; Pacho Ramos <pacho@gentoo.org> libgusb-0.1.2.ebuild:
   amd64 stable, bug 393007
